# complete_modern_cpp

./: README.md  meson.build
include/: s2a1.hpp  s2a2.hpp
lib/: s2a1.cpp  s2a2.cpp  s2a3.cpp
tests/: s2a1_tests.cpp  s2a2_tests.cpp
